; ModuleID = '/home/carl/AnghaBench/kphp-kdb/support/extr_support-engine.c_memcache_stats.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/support/extr_support-engine.c_memcache_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }

@stats_buff = common dso_local global i8* null, align 8
@STATS_BUFF_SIZE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [6 x i8] c"END\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memcache_stats(%struct.connection* %0) #0 {
  %2 = alloca %struct.connection*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %2, align 8
  %5 = call i32 (...) @support_prepare_stats()
  store i32 %5, i32* %3, align 4
  %6 = load %struct.connection*, %struct.connection** %2, align 8
  %7 = load i8*, i8** @stats_buff, align 8
  %8 = load i32, i32* %3, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i8, i8* %7, i64 %9
  %11 = load i64, i64* @STATS_BUFF_SIZE, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = sub nsw i64 %11, %13
  %15 = call i32 @prepare_stats(%struct.connection* %6, i8* %10, i64 %14)
  store i32 %15, i32* %4, align 4
  %16 = load %struct.connection*, %struct.connection** %2, align 8
  %17 = getelementptr inbounds %struct.connection, %struct.connection* %16, i32 0, i32 0
  %18 = load i8*, i8** @stats_buff, align 8
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = add nsw i32 %19, %20
  %22 = call i32 @write_out(i32* %17, i8* %18, i32 %21)
  %23 = load %struct.connection*, %struct.connection** %2, align 8
  %24 = getelementptr inbounds %struct.connection, %struct.connection* %23, i32 0, i32 0
  %25 = call i32 @write_out(i32* %24, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 5)
  ret i32 0
}

declare dso_local i32 @support_prepare_stats(...) #1

declare dso_local i32 @prepare_stats(%struct.connection*, i8*, i64) #1

declare dso_local i32 @write_out(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
